--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.35"
+    "save": "^2.9.0",
+    "vue": "^3.4.35",
+    "vue-router": "^4.4.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
